# TrafikverketTrackSwitch

./: README.md  main.py  output.txt  pyproject.toml
