[tool.poetry]
name = "trafikverkettrackswitch"
version = "0.1.0"
description = ""
authors = ["Dennis Priskorn <egils@riseup.net>"]
license = "GPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fiona = "^1.9.5"
geopandas = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
